@@ -1,3 +1,12 @@
+2011-01-16  Jakub Jelinek  <jakub@redhat.com>
+
+	Backport from mainline
+	2010-12-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/46874
+	* trans-openmp.c (gfc_trans_omp_array_reduction): Handle allocatable
+	dummy variables.
+
 2011-01-16  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	Backport from trunk
